src/main/jkube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${oc.name}
  labels:
    name: ${oc.name}
    version: ${oc.version}
  annotations:
    description: Route for Decision Central's http service.
    haproxy.router.openshift.io/timeout: 60s
spec:
  selector:
    name: ${oc.name}
    version: ${oc.version}
  host: ${oc.route.host}
  path: ${oc.server.servlet.context-path}
  port:
    targetPort: http-${oc.name}
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: ${oc.name}
